footer has issues, too much spacing

--- a/style.css
+++ b/style.css
@@ -127,7 +127,6 @@ nav{
 }
 
 .main-footer{
-    
     bottom: 0;
     background: rgb(38, 180, 38);
     color: white;
@@ -168,3 +167,24 @@ nav{
 .column{
     float: left;
 }
+.left{
+    width: 25%;
+}
+.right{
+    width:75%;
+}
+#wewe {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+}
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.card-container {
+    padding: 2px 16px;
+    
+}
+
+
+
